--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mime": "^3.0.0",
     "mongoose": "^7.4.1",
     "nodemon": "^3.0.1",
+    "path": "^0.12.7",
     "uuid": "^9.0.0",
     "winston": "^3.10.0"
   }
